updated localization updated change log change setting for constant flow rate step to 1

--- a/Water_Features/l10n/de-DE.csv
+++ b/Water_Features/l10n/de-DE.csv
@@ -63,23 +63,14 @@
 "YY_WATER_FEATURES.OriginalFlow","Originale Wasserflussrate","","","","","","","","","","","",""
 "YY_WATER_FEATURES.MinDepth","Minimale Tiefe","","","","","","","","","","","",""
 "YY_WATER_FEATURES.Radius","Radius","","","","","","","","","","","",""
-"YY_WATER_FEATURES.amount-down-arrow","Wasserfluss/Tiefe/Höhe verringern","","","","","","","","","","","",""
 "YY_WATER_FEATURES_DESCRIPTION.amount-down-arrow","Reduziert den Wasserfluss für Bäche. Verringert die Tiefe oder Höhe von Flüssen, Meeren und Seen. Reduziert die maximale Tiefe für Regenrückhaltebecken und Hochwasserrückhaltebecken.","","","","","","","","","","","",""
-"YY_WATER_FEATURES.amount-up-arrow","Wasserfluss/Tiefe/Höhe erhöhen","","","","","","","","","","","",""
 "YY_WATER_FEATURES_DESCRIPTION.amount-up-arrow","Erhöht den Wasserfluss für Bäche. Vergrößert die Tiefe oder Höhe von Flüssen, Meeren und Seen. Erhöht die maximale Tiefe für Regenrückhaltebecken und Hochwasserrückhaltebecken.","","","","","","","","","","","",""
-"YY_WATER_FEATURES.radius-down-arrow","Radius reduzieren","","","","","","","","","","","",""
 "YY_WATER_FEATURES_DESCRIPTION.radius-down-arrow","Reduziert den Radius.","","","","","","","","","","","",""
-"YY_WATER_FEATURES.radius-up-arrow","Radius vergrößern","","","","","","","","","","","",""
 "YY_WATER_FEATURES_DESCRIPTION.radius-up-arrow","Erhöht den Radius.","","","","","","","","","","","",""
-"YY_WATER_FEATURES.min-depth-down-arrow","Min. Tiefe verringern","","","","","","","","","","","",""
 "YY_WATER_FEATURES_DESCRIPTION.min-depth-down-arrow","Verringert die minimale Tiefe.","","","","","","","","","","","",""
-"YY_WATER_FEATURES.min-depth-up-arrow","Min. Tiefe erhöhen","","","","","","","","","","","",""
 "YY_WATER_FEATURES_DESCRIPTION.min-depth-up-arrow","Erhöht die minimale Tiefe.","","","","","","","","","","","",""
-"YY_WATER_FEATURES.amount-rate-of-change","Fließ/Tiefe/Höhe Rate der Veränderung","","","","","","","","","","","",""
 "YY_WATER_FEATURES_DESCRIPTION.amount-rate-of-change","Ändert die Rate, in der die Erhöhungs- und Reduktionsschaltflächen für Durchflussrate, Tiefe und Höhe arbeiten.","","","","","","","","","","","",""
-"YY_WATER_FEATURES.radius-rate-of-change","Radiusrate der Änderung","","","","","","","","","","","",""
 "YY_WATER_FEATURES_DESCRIPTION.radius-rate-of-change","Ändert die Rate, in der die Erhöhungs- und Reduktionsschaltflächen für den Radius arbeiten.","","","","","","","","","","","",""
-"YY_WATER_FEATURES.min-depth-rate-of-change","Mindesttiefe Veränderungsrate","","","","","","","","","","","",""
 "YY_WATER_FEATURES_DESCRIPTION.min-depth-rate-of-change","Ändert die Rate, in der die Erhöhungs- und Reduktionsschaltflächen für die Mindesttiefe arbeiten.","","","","","","","","","","","",""
 "SubServices.NAME[WaterTool]","Wasserwerkzeug","","","","","","","","","","","",""
 "Assets.SUB_SERVICE_DESCRIPTION[WaterTool]","Mit dem Wasserwerkzeug können Sie Wasserquellen von Ihrer Karte hinzufügen und entfernen.","","","","","","","","","","","",""
@@ -101,3 +92,22 @@
 "Tooltip.LABEL[YY.WT.PlaceInsideBorder]","Diese Wasserquelle muss auf der spielbaren Karte platziert werden.","","","","","","","","","","","",""
 "Tooltip.LABEL[YY.WT.MustTouchBorder]","Meerwasserquellen müssen die Kartengrenze berühren.","","","","","","","","","","","",""
 "Tooltip.LABEL[YY.WT.LockElevation]","Rechtsklick um die Wasseroberflächenhöhe zu bestimmen.","","","","","","","","","","","",""
+"Options.GROUP:Experimental","Experimentell","","","","","","","","","","","",""
+"Options.GROUP:Stable","Stabil","","","","","","","","","","","",""
+"Options.OPTION:Fluidness","Fluidität","","","","","","","","","","","",""
+"Options.OPTION_DESCRIPTION:Fluidness","Ändert die Fluidität des Wassers und sollte die Strömungseigenschaften ändern.","","","","","","","","","","","",""
+"Editor.TOOL[Yenyang's Water Tool]","Yenyang's Wasserwerkzeug","","","","","","","","","","","",""
+"Options.OPTION:WaterToolSettingsAffectEditorSimulation","Wasserwerkzeugeinstellungen beeinflussen die Editor Simulation","","","","","","","","","","","",""
+"Options.OPTION_DESCRIPTION:WaterToolSettingsAffectEditorSimulation","Erlaubt es den Wasserwerkzeugeinstellungen die Editor Simulation zu beeinflussen wie Verdampfung, Fluidität, und den Wasserbereinigungszyklus.","","","","","","","","","","","",""
+"Options.OPTION:SeasonalStreamsAffectEditorSimulation","Saisonale Wasserflusseinstellungen beeinflussen die Editor Simulation","","","","","","","","","","","",""
+"Options.OPTION_DESCRIPTION:SeasonalStreamsAffectEditorSimulation","Erlaubt es den Einstellungen der Saisonalen Wasserflüsse die Editor Simulation zu beeinflussen und Wasserflussraten von Flüssen zu ändern.","","","","","","","","","","","",""
+"Options.OPTION:WavesAndTidesAffectEditorSimulation","Wellen und Gezeiteneinstellungen beeinflussen die Editor Simulation","","","","","","","","","","","",""
+"Options.OPTION_DESCRIPTION:WavesAndTidesAffectEditorSimulation","Erlaubt es den Wellen und Gezeiteneinstellungen die Editor Simulation zu beeinflussen, indem die Schwingung des Meeresspiegels und der Dämpfungswert beeinflusst wird.","","","","","","","","","","","",""
+"YY_WATER_FEATURES_DESCRIPTION.ElevationChange","Das Wasserwerkzeug ändert die Zielhöhen bestehender Wasserquellen, indem man Linksklick auf ihnen gedrückt halt und zieht, bis man bei der gewünschten Höhe angekommen ist. Behalte den Cursor innerhalb des spielbaren Bereichs für Zuverlässigkeit. Rechtsklick zum Abbrechen.","","","","","","","","","","","",""
+"YY_WATER_FEATURES_DESCRIPTION.PlaceWaterSource","Das Wasserwerkzeug platziert Wasserquellen mit Linksklick und entfernt Wasserquellen mit Rechtsklick.","","","","","","","","","","","",""
+"YY_WATER_FEATURES_DESCRIPTION.MoveWaterSource","Das Wasserwerkzeug verschiebt vorhandene Wasserquellen. Die Zielhöhe der vorhandenen Wasserquellen wird sich nicht ändern. Rechtsklick zum Abbrechen.","","","","","","","","","","","",""
+"YY_WATER_FEATURES_DESCRIPTION.RadiusChange","Das Wasserwerkzeug wird den Radius der Wasserquellen ändern. Rechtsklick zum Abbrechen.","","","","","","","","","","","",""
+"YY_WATER_FEATURES.ElevationChange","Höhenänderung","","","","","","","","","","","",""
+"YY_WATER_FEATURES.PlaceWaterSource","Wasserquelle platzieren","","","","","","","","","","","",""
+"YY_WATER_FEATURES.MoveWaterSource","Wasserquelle verschieben","","","","","","","","","","","",""
+"YY_WATER_FEATURES.RadiusChange","Radius ändern","","","","","","","","","","","",""
