--- a/Water_Features/l10n/fr-FR.csv
+++ b/Water_Features/l10n/fr-FR.csv
@@ -1,4 +1,4 @@
-"Options.SECTION[Water_Features.Water_Features.WaterFeaturesMod]","Caractéristique pour l'eau","","","","","","","","","","","",""
+"Options.SECTION[Water_Features.Water_Features.WaterFeaturesMod]","Water Features","","","","","","","","","","","",""
 "Options.TAB[Water_Features.Water_Features.WaterFeaturesMod.Seasonal Streams]","Variation de l'eau selon les saisons","","","","","","","","","","","",""
 "Options.TAB[Water_Features.Water_Features.WaterFeaturesMod.Water Tool]","Outil pour l'eau","","","","","","","","","","","",""
 "Options.TAB[Water_Features.Water_Features.WaterFeaturesMod.Waves and Tides]","Vagues et Marées","","","","","","","","","","","",""
@@ -63,23 +63,14 @@
 "YY_WATER_FEATURES.OriginalFlow","Débit original","","","","","","","","","","","",""
 "YY_WATER_FEATURES.MinDepth","Profondeur Minimum","","","","","","","","","","","",""
 "YY_WATER_FEATURES.Radius","Rayon","","","","","","","","","","","",""
-"YY_WATER_FEATURES.amount-down-arrow","Réduire le débit/profondeur/altitude","","","","","","","","","","","",""
 "YY_WATER_FEATURES_DESCRIPTION.amount-down-arrow","Réduire le débit des ruisseaux. Diminuer la profondeur ou l'élévation pour les rivières, mer et lacs. Réduire la profondeur maximale des bassins de rétention et de détention.","","","","","","","","","","","",""
-"YY_WATER_FEATURES.amount-up-arrow","Augmenter le débit/profondeur/altitude","","","","","","","","","","","",""
 "YY_WATER_FEATURES_DESCRIPTION.amount-up-arrow","Augmente le débit des ruisseaux. Augmente la profondeur ou l'élévation des rivières, des mers et des lacs. Augmente la profondeur maximale des bassins de rétention et de détention.","","","","","","","","","","","",""
-"YY_WATER_FEATURES.radius-down-arrow","Réduire le rayon","","","","","","","","","","","",""
 "YY_WATER_FEATURES_DESCRIPTION.radius-down-arrow","Réduit le rayon.","","","","","","","","","","","",""
-"YY_WATER_FEATURES.radius-up-arrow","Augmenter le rayon","","","","","","","","","","","",""
 "YY_WATER_FEATURES_DESCRIPTION.radius-up-arrow","Augmente le rayon.","","","","","","","","","","","",""
-"YY_WATER_FEATURES.min-depth-down-arrow","Réduire la profondeur minimale","","","","","","","","","","","",""
 "YY_WATER_FEATURES_DESCRIPTION.min-depth-down-arrow","Réduit la profondeur minimale.","","","","","","","","","","","",""
-"YY_WATER_FEATURES.min-depth-up-arrow","Augmenter la profondeur minimale","","","","","","","","","","","",""
 "YY_WATER_FEATURES_DESCRIPTION.min-depth-up-arrow","Augmenter la profondeur minimale.","","","","","","","","","","","",""
-"YY_WATER_FEATURES.amount-rate-of-change","Le taux avec lequel le courant , la profondeur et l'élévation de l'eau change","","","","","","","","","","","",""
 "YY_WATER_FEATURES_DESCRIPTION.amount-rate-of-change","Modifie la vitesse dans laquelle les boutons d'augmentation et de diminution fonctionnent pour le courant, la profondeur et L'Élévation de l'eau.","","","","","","","","","","","",""
-"YY_WATER_FEATURES.radius-rate-of-change","Taux de changement de rayon","","","","","","","","","","","",""
 "YY_WATER_FEATURES_DESCRIPTION.radius-rate-of-change","Modifie le taux d'augmentation et de diminution des boutons pour le rayon.","","","","","","","","","","","",""
-"YY_WATER_FEATURES.min-depth-rate-of-change","Taux de changement des chiffres pour la profondeur minimum","","","","","","","","","","","",""
 "YY_WATER_FEATURES_DESCRIPTION.min-depth-rate-of-change","Modifie le taux d'augmentation et de diminution des boutons pour le rayon.","","","","","","","","","","","",""
 "SubServices.NAME[WaterTool]","Outil pour l'eau","","","","","","","","","","","",""
 "Assets.SUB_SERVICE_DESCRIPTION[WaterTool]","L'outil d'eau vous permet d'ajouter et de retirer des sources d'eau de votre carte.","","","","","","","","","","","",""
@@ -101,3 +92,22 @@
 "Tooltip.LABEL[YY.WT.PlaceInsideBorder]","Cette source d'eau doit être placé à l'intérieur des limites jouables.","","","","","","","","","","","",""
 "Tooltip.LABEL[YY.WT.MustTouchBorder]","La source d'eau de la mer doit toucher les bordures de la carte.","","","","","","","","","","","",""
 "Tooltip.LABEL[YY.WT.LockElevation]","Cliquez avec le bouton droit pour désigner l'altitude de la surface d'eau.","","","","","","","","","","","",""
+"Options.GROUP:Experimental","Expérimental","","","","","","","","","","","",""
+"Options.GROUP:Stable","Stable","","","","","","","","","","","",""
+"Options.OPTION:Fluidness","Fluide","","","","","","","","","","","",""
+"Options.OPTION_DESCRIPTION:Fluidness","Modifier le facteur de fluidité du système d'eau va modifier les caractéristiques de l'écoulement.","","","","","","","","","","","",""
+"Editor.TOOL[Yenyang's Water Tool]","Yenyang's Water Tool","","","","","","","","","","","",""
+"Options.OPTION:WaterToolSettingsAffectEditorSimulation","Les paramètres de l'outil d'eau affectent la simulation de l'éditeur","","","","","","","","","","","",""
+"Options.OPTION_DESCRIPTION:WaterToolSettingsAffectEditorSimulation","Permet aux paramètres de l'onglet Outil d'eau d'affecter la simulation de l'éditeur tels que l'évaporation, la fluidité et le cycle de nettoyage de l'eau.","","","","","","","","","","","",""
+"Options.OPTION:SeasonalStreamsAffectEditorSimulation","Les paramètres de flux saisonniers affectent la simulation de l'éditeur","","","","","","","","","","","",""
+"Options.OPTION_DESCRIPTION:SeasonalStreamsAffectEditorSimulation","Permet aux paramètres de débit d'eau saisonniers d'affecter la simulation de l'éditeur et de modifier le débit d'eau des ruisseaux.","","","","","","","","","","","",""
+"Options.OPTION:WavesAndTidesAffectEditorSimulation","Les paramètres des vagues et des marées affectent la simulation de l'éditeur","","","","","","","","","","","",""
+"Options.OPTION_DESCRIPTION:WavesAndTidesAffectEditorSimulation","Permet aux paramètres de l'onglet Vagues et Marées d'affecter la simulation de l'éditeur en oscillant le niveau de la mer et en modifiant la valeur de l'amortissement.","","","","","","","","","","","",""
+"YY_WATER_FEATURES_DESCRIPTION.ElevationChange","L’outil d'eau modifiera les altitudes cibles des sources d’eau existantes. Pour ce faire, il faut survoler la source d’eau existante, faire un clic gauche, le maintenir et traîner et relâcher à une nouvelle altitude. Habituellement trainer vers l'extérieur augmente l'élévation et trainer vers l'intérieur diminue l'élévation, mais c'est vraiment juste de relacher à l'altitude souhaitée. Gardez le curseur dans la zone jouable pour être précis. Faites un clic droit pour annuler.","","","","","","","","","","","",""
+"YY_WATER_FEATURES_DESCRIPTION.PlaceWaterSource","Pour placer une source d'eau avec l’outil d'eau il faut faire un clic gauche et un clic droit pour les retirer.","","","","","","","","","","","",""
+"YY_WATER_FEATURES_DESCRIPTION.MoveWaterSource","L'outil d'eau déplacera les sources d'eau existantes. Les altitudes ciblées des sources d'eau existantes ne changeront pas. Faites un clic droit pour annuler.","","","","","","","","","","","",""
+"YY_WATER_FEATURES_DESCRIPTION.RadiusChange","L'outil d'eau va changer le rayon des sources d'eau. Faites un clic droit pour annuler.","","","","","","","","","","","",""
+"YY_WATER_FEATURES.ElevationChange","Altitude Visée","","","","","","","","","","","",""
+"YY_WATER_FEATURES.PlaceWaterSource","Placer une source d'eau","","","","","","","","","","","",""
+"YY_WATER_FEATURES.MoveWaterSource","Déplacer la source d’eau","","","","","","","","","","","",""
+"YY_WATER_FEATURES.RadiusChange","Changer le rayon","","","","","","","","","","","",""
