--- a/Water_Features/l10n/ko-KR.csv
+++ b/Water_Features/l10n/ko-KR.csv
@@ -63,23 +63,14 @@
 "YY_WATER_FEATURES.OriginalFlow","원본 유량","","","","","","","","","","","",""
 "YY_WATER_FEATURES.MinDepth","최소 깊이","","","","","","","","","","","",""
 "YY_WATER_FEATURES.Radius","범위","","","","","","","","","","","",""
-"YY_WATER_FEATURES.amount-down-arrow","유량/깊이/높이 감소","","","","","","","","","","","",""
 "YY_WATER_FEATURES_DESCRIPTION.amount-down-arrow","하천의 흐름을 감소시킵니다. 강, 바다, 호수의 깊이나 고도가 증가합니다. 유수지 및 유수지의 최대 깊이가 낮아집니다.","","","","","","","","","","","",""
-"YY_WATER_FEATURES.amount-up-arrow","유량/깊이/높이 증가","","","","","","","","","","","",""
 "YY_WATER_FEATURES_DESCRIPTION.amount-up-arrow","하천의 유량을 증가시킵니다. 강, 바다, 호수의 깊이나 고도가 증가합니다. 유수지 및 유수지의 최대 깊이가 증가합니다.","","","","","","","","","","","",""
-"YY_WATER_FEATURES.radius-down-arrow","반경 감소","","","","","","","","","","","",""
 "YY_WATER_FEATURES_DESCRIPTION.radius-down-arrow","반경 감소","","","","","","","","","","","",""
-"YY_WATER_FEATURES.radius-up-arrow","반경 증가","","","","","","","","","","","",""
 "YY_WATER_FEATURES_DESCRIPTION.radius-up-arrow","반경 증가","","","","","","","","","","","",""
-"YY_WATER_FEATURES.min-depth-down-arrow","최소 깊이 감소","","","","","","","","","","","",""
 "YY_WATER_FEATURES_DESCRIPTION.min-depth-down-arrow","최소 깊이 감소","","","","","","","","","","","",""
-"YY_WATER_FEATURES.min-depth-up-arrow","최소 깊이 증가","","","","","","","","","","","",""
 "YY_WATER_FEATURES_DESCRIPTION.min-depth-up-arrow","최소 깊이 증가","","","","","","","","","","","",""
-"YY_WATER_FEATURES.amount-rate-of-change","유량/깊이/높이 변경","","","","","","","","","","","",""
 "YY_WATER_FEATURES_DESCRIPTION.amount-rate-of-change","흐름, 깊이 및 높이에 대한 증가 및 감소 배수를 버튼으로 조절 할 수 있습니다.","","","","","","","","","","","",""
-"YY_WATER_FEATURES.radius-rate-of-change","반경 비율 변화","","","","","","","","","","","",""
 "YY_WATER_FEATURES_DESCRIPTION.radius-rate-of-change","반경 증가 및 감소 배수를 버튼으로 조절 할 수 있습니다.","","","","","","","","","","","",""
-"YY_WATER_FEATURES.min-depth-rate-of-change","최소 깊이 변화율","","","","","","","","","","","",""
 "YY_WATER_FEATURES_DESCRIPTION.min-depth-rate-of-change","최소 깊이에 대해 증가 및 감소 배수를 버튼으로 조절 할 수 있습니다.","","","","","","","","","","","",""
 "SubServices.NAME[WaterTool]","물 도구","","","","","","","","","","","",""
 "Assets.SUB_SERVICE_DESCRIPTION[WaterTool]","물 도구를 사용하면 지도에 물 공급원을 추가하고 제거할 수 있습니다.","","","","","","","","","","","",""
@@ -101,3 +92,22 @@
 "Tooltip.LABEL[YY.WT.PlaceInsideBorder]","이 수원은 플레이 가능한 맵 내부에 배치되어야 합니다.","","","","","","","","","","","",""
 "Tooltip.LABEL[YY.WT.MustTouchBorder]","바다 해수 공급원은 지도 경계에 닿아야 합니다.","","","","","","","","","","","",""
 "Tooltip.LABEL[YY.WT.LockElevation]","수면 높이를 지정하려면 우클릭 하십시오.","","","","","","","","","","","",""
+"Options.GROUP:Experimental","Experimental","","","","","","","","","","","",""
+"Options.GROUP:Stable","Stable","","","","","","","","","","","",""
+"Options.OPTION:Fluidness","Fluidness","","","","","","","","","","","",""
+"Options.OPTION_DESCRIPTION:Fluidness","Alter the Fluidness factor of the water system. It should change the flow characteristics.","","","","","","","","","","","",""
+"Editor.TOOL[Yenyang's Water Tool]","Yenyang's Water Tool","","","","","","","","","","","",""
+"Options.OPTION:WaterToolSettingsAffectEditorSimulation","Water Tool Settings Affect Editor Simulation","","","","","","","","","","","",""
+"Options.OPTION_DESCRIPTION:WaterToolSettingsAffectEditorSimulation","Allows the settings in the Water Tool tab to affect the editor simulation such as evaporation, fluidness, and Water Clean Up Cycle.","","","","","","","","","","","",""
+"Options.OPTION:SeasonalStreamsAffectEditorSimulation","Seasonal Streams Settings Affect Editor Simulation","","","","","","","","","","","",""
+"Options.OPTION_DESCRIPTION:SeasonalStreamsAffectEditorSimulation","Allows the settings in the Seasonal Streams tab to affect the editor simulation and alter stream flowrates.","","","","","","","","","","","",""
+"Options.OPTION:WavesAndTidesAffectEditorSimulation","Waves and Tides Settings Affect Editor Simulation","","","","","","","","","","","",""
+"Options.OPTION_DESCRIPTION:WavesAndTidesAffectEditorSimulation","Allows the settings in the Waves and Tides tab to affect the editor simulation by oscillating sea level and altering damping value.","","","","","","","","","","","",""
+"YY_WATER_FEATURES_DESCRIPTION.ElevationChange","Water Tool will change target elevations of existing water sources by hovering over existing water source, left clicking, holding, dragging and releasing at new elevation. Usually dragging out raises, and dragging in lowers, but it's really just releasing at the desired elevation. Keep the cursor within playable area for reliability. Right click to cancel.","","","","","","","","","","","",""
+"YY_WATER_FEATURES_DESCRIPTION.PlaceWaterSource","Water Tool will place water sources with left click, and remove water sources with right click.","","","","","","","","","","","",""
+"YY_WATER_FEATURES_DESCRIPTION.MoveWaterSource","Water Tool will move existing water sources. Target elevations of existing water sources will not change. Right click to cancel.","","","","","","","","","","","",""
+"YY_WATER_FEATURES_DESCRIPTION.RadiusChange","Water Tool will change radius of water sources. Right click to cancel.","","","","","","","","","","","",""
+"YY_WATER_FEATURES.ElevationChange","Elevation Change","","","","","","","","","","","",""
+"YY_WATER_FEATURES.PlaceWaterSource","Place Water Source","","","","","","","","","","","",""
+"YY_WATER_FEATURES.MoveWaterSource","Move Water Source","","","","","","","","","","","",""
+"YY_WATER_FEATURES.RadiusChange","Change Radius","","","","","","","","","","","",""
