--- a/Water_Features/l10n/pl-PL.csv
+++ b/Water_Features/l10n/pl-PL.csv
@@ -7,7 +7,7 @@
 "Options.GROUP[Water_Features.Water_Features.WaterFeaturesMod.Waves and Tides]","Fale i pływy","","","","","","","","","","","",""
 "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.IncludeRetentionBasins]","Dodaj zbiorniki retencyjne (Restart wymagany)","","","","","","","","","","","",""
 "Options.OPTION_DESCRIPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.IncludeRetentionBasins]","Niestandardowe, źródło wody, które podnosi się wraz z opadami atmosferycznymi oraz topnieniem śniegu i maleje, gdy jest sucho. Mają maksymalny poziom i minimalny poziom wody. Może być konieczne dostosowanie globalnej szybkości parowania wody w ustawieniach w celu uzyskania pożądanego napływu wody do zbiornika.","","","","","","","","","","","",""
-"Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.IncludeDetentionBasins]","Dodaj poldery przeciwpowodziowe (Restart wymagany)","","","","","","","","","","","",""
+"Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.IncludeDetentionBasins]","Dodaj poldery (Restart wymagany)","","","","","","","","","","","",""
 "Options.OPTION_DESCRIPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.IncludeDetentionBasins]","Niestandardowe, źródło wody, które podnosi się wraz z opadami atmosferycznymi oraz topnieniem śniegu i maleje, gdy jest sucho. Mają maksymalny poziom wody, ale nie mają minimalnego poziomu wody. Może być konieczne dostosowanie globalnej szybkości parowania wody w ustawieniach w celu uzyskania pożądanego napływu wody do zbiornika.","","","","","","","","","","","",""
 "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.TrySmallerRadii]","Wypróbuj mniejszy promień","","","","","","","","","","","",""
 "Options.OPTION_DESCRIPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.TrySmallerRadii]","Pozwala na tworzenie źródeł wody o promieniu mniejszym niż 5 m. Nie zawsze będzie działać, ale zostanie zwiększony do promienia, który działa.","","","","","","","","","","","",""
@@ -63,23 +63,14 @@
 "YY_WATER_FEATURES.OriginalFlow","Oryginalny przepływ","","","","","","","","","","","",""
 "YY_WATER_FEATURES.MinDepth","Min. głębokość","","","","","","","","","","","",""
 "YY_WATER_FEATURES.Radius","Promień","","","","","","","","","","","",""
-"YY_WATER_FEATURES.amount-down-arrow","Zmniejsz przepływ/głębokość/wysokość","","","","","","","","","","","",""
 "YY_WATER_FEATURES_DESCRIPTION.amount-down-arrow","Zmniejsza przepływ wody strumieni. Zmniejsza głębokość lub wysokość, rzek, mórz i jezior. Zmniejsza maksymalną głębokość zbiorników retencyjnych i polderów.","","","","","","","","","","","",""
-"YY_WATER_FEATURES.amount-up-arrow","Zwiększ przepływ/głębokość/wysokość","","","","","","","","","","","",""
 "YY_WATER_FEATURES_DESCRIPTION.amount-up-arrow","Zwiększa przepływ wody strumieni. Zwiększa głębokość lub wysokość, rzek, mórz i jezior. Zwiększa maksymalną głębokość zbiorników retencyjnych i polderów.","","","","","","","","","","","",""
-"YY_WATER_FEATURES.radius-down-arrow","Zmniejsz promień","","","","","","","","","","","",""
 "YY_WATER_FEATURES_DESCRIPTION.radius-down-arrow","Zmniejsza promień.","","","","","","","","","","","",""
-"YY_WATER_FEATURES.radius-up-arrow","Zwiększ promień","","","","","","","","","","","",""
 "YY_WATER_FEATURES_DESCRIPTION.radius-up-arrow","Zwiększa promień.","","","","","","","","","","","",""
-"YY_WATER_FEATURES.min-depth-down-arrow","Zmniejsz min. głębokość","","","","","","","","","","","",""
 "YY_WATER_FEATURES_DESCRIPTION.min-depth-down-arrow","Zmniejsza minimalną głębokość.","","","","","","","","","","","",""
-"YY_WATER_FEATURES.min-depth-up-arrow","Zwiększ min. głębokość","","","","","","","","","","","",""
 "YY_WATER_FEATURES_DESCRIPTION.min-depth-up-arrow","Zwiększa minimalną głębokość.","","","","","","","","","","","",""
-"YY_WATER_FEATURES.amount-rate-of-change","Intensywność zmian przepływu/głębokości/wysokości","","","","","","","","","","","",""
 "YY_WATER_FEATURES_DESCRIPTION.amount-rate-of-change","Zmienia intensywność przycisków zwiększenia i zmniejszenia dla przepływu, głębokości i wysokości.","","","","","","","","","","","",""
-"YY_WATER_FEATURES.radius-rate-of-change","Intensywność zmiany promienia","","","","","","","","","","","",""
 "YY_WATER_FEATURES_DESCRIPTION.radius-rate-of-change","Zmienia intensywność przycisków zwiększenia i zmniejszenia zmieniających promień.","","","","","","","","","","","",""
-"YY_WATER_FEATURES.min-depth-rate-of-change","Intensywność zmiany minimalnej głębokości","","","","","","","","","","","",""
 "YY_WATER_FEATURES_DESCRIPTION.min-depth-rate-of-change","Zmienia intensywność przycisków zwiększenia i zmniejszenia zmieniających minimalną głębokość.","","","","","","","","","","","",""
 "SubServices.NAME[WaterTool]","Woda","","","","","","","","","","","",""
 "Assets.SUB_SERVICE_DESCRIPTION[WaterTool]","Narzędzia wody pozwalają na dodanie i usuwanie źródeł wody na mapie.","","","","","","","","","","","",""
@@ -91,7 +82,7 @@
 "Assets.DESCRIPTION[WaterSource Sea]","Kontroluje wodę wpływającą i wypływającą z granicy, a najniższe morze kontroluje poziom morza. Gdy fale i pływy są wyłączone, utrzymuje stały poziom wody. Gdy fale i pływy są włączone, poziom wody podnosi się i opada poniżej oryginalnego poziomu morza. Kliknij prawym przyciskiem myszy, aby wyznaczyć wysokość źródła. Kliknij lewym przyciskiem myszy, aby umieścić, jeżli promień dotyka granicy mapy. Usuń, klikając prawym przyciskiem myszy nad źródłem.","","","","","","","","","","","",""
 "Assets.NAME[WaterSource Lake]","Jezioro — źródło wody o stałym poziomie","","","","","","","","","","","",""
 "Assets.DESCRIPTION[WaterSource Lake]","Szybko się napełnia, aż osiągnie pożądaną wysokość, po czym utrzymuje ten poziom. Jeśli docelowa wysokość jest poniżej poziomu gruntu, przyspiesza wchłanianie wody, szybciej niż parowanie. Kliknij prawym przyciskiem myszy, aby wyznaczyć wysokość źródła. Kliknij lewym przyciskiem myszy, aby umieścić w obszarze rozgrywki. Usuń, klikając prawym przyciskiem myszy nad źródłem.","","","","","","","","","","","",""
-"Assets.NAME[WaterSource DetentionBasin]","Polder przeciwpowodziowy","","","","","","","","","","","",""
+"Assets.NAME[WaterSource DetentionBasin]","Polder","","","","","","","","","","","",""
 "Assets.DESCRIPTION[WaterSource DetentionBasin]","Niestandardowe źródło wody, które zwiększa się z ilością opadów i topnieniem śniegu oraz powoli opada przy suchej pogodzie. Mają maksymalny poziom wody, ale nie mają minimalnego poziomu wody. Kliknij prawym przyciskiem myszy, aby wyznaczyć maksymalną wysokość źródła. Kliknij lewym przyciskiem myszy, aby umieścić w obszarze rozgrywki. Usuń, klikając prawym przyciskiem myszy nad źródłem.","","","","","","","","","","","",""
 "Assets.NAME[WaterSource RetentionBasin]","Zbiornik retencyjny","","","","","","","","","","","",""
 "Assets.DESCRIPTION[WaterSource RetentionBasin]","Niestandardowe źródło wody, które zwiększa się z ilością opadów i topnieniem śniegu oraz powoli opada przy suchej pogodzie. Mają maksymalny i minimalny poziomu wody. Kliknij prawym przyciskiem myszy, aby wyznaczyć maksymalną wysokość źródła. Kliknij lewym przyciskiem myszy, aby umieścić w obszarze rozgrywki. Usuń, klikając prawym przyciskiem myszy nad źródłem.","","","","","","","","","","","",""
@@ -101,3 +92,22 @@
 "Tooltip.LABEL[YY.WT.PlaceInsideBorder]","To źródło wody musi być umieszczone wewnątrz obszaru rozgrywki.","","","","","","","","","","","",""
 "Tooltip.LABEL[YY.WT.MustTouchBorder]","Źródła wody morskiej muszą dotykać granicy mapy.","","","","","","","","","","","",""
 "Tooltip.LABEL[YY.WT.LockElevation]","Kliknij prawym przyciskiem myszy, aby wyznaczyć poziom wody.","","","","","","","","","","","",""
+"Options.GROUP:Experimental","Eksperymentalne","","","","","","","","","","","",""
+"Options.GROUP:Stable","Stabilne","","","","","","","","","","","",""
+"Options.OPTION:Fluidness","Płynność","","","","","","","","","","","",""
+"Options.OPTION_DESCRIPTION:Fluidness","Zmień współczynnik płynności wody. Powinno to zmienić właściwości przepływ wody.","","","","","","","","","","","",""
+"Editor.TOOL[Yenyang's Water Tool]","Narzędzie — woda Yenyanga","","","","","","","","","","","",""
+"Options.OPTION:WaterToolSettingsAffectEditorSimulation","Ustawienia narzędzia — woda wpływa na symulację w edytorze","","","","","","","","","","","",""
+"Options.OPTION_DESCRIPTION:WaterToolSettingsAffectEditorSimulation","Pozwala na działanie ustawień z zakładki narzędzie — woda w symulacji edytora, takich jak parowanie, płynność i usuwanie rozlewisk wody.","","","","","","","","","","","",""
+"Options.OPTION:SeasonalStreamsAffectEditorSimulation","Ustawienia strumieni sezonowych wpływają na symulację w edytorze","","","","","","","","","","","",""
+"Options.OPTION_DESCRIPTION:SeasonalStreamsAffectEditorSimulation","Pozwala na działanie ustawień z zakładki strumienie sezonowe w symulacji edytora i zmieniać przepływ wody strumieni.","","","","","","","","","","","",""
+"Options.OPTION:WavesAndTidesAffectEditorSimulation","Ustawienia fale i pływy wpływa na symulację w edytorze","","","","","","","","","","","",""
+"Options.OPTION_DESCRIPTION:WavesAndTidesAffectEditorSimulation","Pozwala na działanie ustawień z zakładki fale i pływy w symulacji edytora zmieniając oscylacje poziomu morza i wartość tłumienia.","","","","","","","","","","","",""
+"YY_WATER_FEATURES_DESCRIPTION.ElevationChange","Narzędzie — woda zmieni wysokość docelową istniejących źródeł wody przez najechanie na nie, kliknięcie lewego przycisku myszy, przytrzymanie, przeciąganie i puszczenie na nowej wysokości. Zwykle przeciąganie z podnosi, a przeciąganie do opuszcza. Trzymaj kursor w obszarze rozgrywki dla niezawodności. Kliknij prawym przyciskiem myszy, aby anulować.","","","","","","","","","","","",""
+"YY_WATER_FEATURES_DESCRIPTION.PlaceWaterSource","Narzędzie — woda umieści źródła wody przez kliknięcie lewym przyciskiem myszy, a usunie źródła wody przez kliknięcie prawym przyciskiem myszy.","","","","","","","","","","","",""
+"YY_WATER_FEATURES_DESCRIPTION.MoveWaterSource","Narzędzie — woda przesunie istniejące źródła wody. Docelowo wysokość istniejących źródeł wody nie ulegnie zmiany. Kliknij prawym przyciskiem myszy, aby anulować.","","","","","","","","","","","",""
+"YY_WATER_FEATURES_DESCRIPTION.RadiusChange","Narzędzie — woda zmieni promień istniejących źródeł wody. Kliknij prawym przyciskiem myszy, aby anulować.","","","","","","","","","","","",""
+"YY_WATER_FEATURES.ElevationChange","Zmiana wysokości","","","","","","","","","","","",""
+"YY_WATER_FEATURES.PlaceWaterSource","Umieścić źródło wody","","","","","","","","","","","",""
+"YY_WATER_FEATURES.MoveWaterSource","Przesuń źródło wody","","","","","","","","","","","",""
+"YY_WATER_FEATURES.RadiusChange","Zmień promień","","","","","","","","","","","",""
