--- a/Water_Features/l10n/pt-BR.csv
+++ b/Water_Features/l10n/pt-BR.csv
@@ -63,23 +63,14 @@
 "YY_WATER_FEATURES.OriginalFlow","Fluxo Original","","","","","","","","","","","",""
 "YY_WATER_FEATURES.MinDepth","Profundidade mínima","","","","","","","","","","","",""
 "YY_WATER_FEATURES.Radius","Raio","","","","","","","","","","","",""
-"YY_WATER_FEATURES.amount-down-arrow","Reduzir fluxo/profundidade/elevação","","","","","","","","","","","",""
 "YY_WATER_FEATURES_DESCRIPTION.amount-down-arrow","Reduz o fluxo para riachos. Diminuindo a profundidade ou elevação de rios, mares, lagos e a profundidade máxima para bacias de retenção e detenção.","","","","","","","","","","","",""
-"YY_WATER_FEATURES.amount-up-arrow","Aumentar fluxo/profundidade/elevação","","","","","","","","","","","",""
 "YY_WATER_FEATURES_DESCRIPTION.amount-up-arrow","Aumenta o fluxo para riachos. Aumentando a profundidade ou elevação de rios, mares e lagos e também a profundidade máxima para bacias de retenção e detenção.","","","","","","","","","","","",""
-"YY_WATER_FEATURES.radius-down-arrow","Reduzir Raio","","","","","","","","","","","",""
 "YY_WATER_FEATURES_DESCRIPTION.radius-down-arrow","Reduz o raio.","","","","","","","","","","","",""
-"YY_WATER_FEATURES.radius-up-arrow","Aumentar o Raio","","","","","","","","","","","",""
 "YY_WATER_FEATURES_DESCRIPTION.radius-up-arrow","Aumenta o raio.","","","","","","","","","","","",""
-"YY_WATER_FEATURES.min-depth-down-arrow","Reduzir profundidade mínima","","","","","","","","","","","",""
 "YY_WATER_FEATURES_DESCRIPTION.min-depth-down-arrow","Reduz a profundidade mínima.","","","","","","","","","","","",""
-"YY_WATER_FEATURES.min-depth-up-arrow","Aumentar profundidade mínima","","","","","","","","","","","",""
 "YY_WATER_FEATURES_DESCRIPTION.min-depth-up-arrow","Aumenta a profundidade mínima.","","","","","","","","","","","",""
-"YY_WATER_FEATURES.amount-rate-of-change","Fluxo/Profundidade/Taxa de mudança de elevação","","","","","","","","","","","",""
 "YY_WATER_FEATURES_DESCRIPTION.amount-rate-of-change","Altera a taxa em que os botões de aumento e redução funcionam para Fluxo, Profundidade e Elevação.","","","","","","","","","","","",""
-"YY_WATER_FEATURES.radius-rate-of-change","Taxa de variação do raio","","","","","","","","","","","",""
 "YY_WATER_FEATURES_DESCRIPTION.radius-rate-of-change","Altera a taxa em que os botões de aumento e redução funcionam para o Raio.","","","","","","","","","","","",""
-"YY_WATER_FEATURES.min-depth-rate-of-change","Taxa mínima de alteração da profundidade","","","","","","","","","","","",""
 "YY_WATER_FEATURES_DESCRIPTION.min-depth-rate-of-change","Altera a taxa na qual os botões de aumento e redução funcionam para a profundidade mínima.","","","","","","","","","","","",""
 "SubServices.NAME[WaterTool]","Ferramenta de Água","","","","","","","","","","","",""
 "Assets.SUB_SERVICE_DESCRIPTION[WaterTool]","A Ferramenta de Água permite que você adicione e remova as fontes de água do seu mapa.","","","","","","","","","","","",""
@@ -101,3 +92,22 @@
 "Tooltip.LABEL[YY.WT.PlaceInsideBorder]","Esta fonte de água deve ser colocada dentro da área disponível.","","","","","","","","","","","",""
 "Tooltip.LABEL[YY.WT.MustTouchBorder]","As fontes de água do mar devem tocar a fronteira do mapa.","","","","","","","","","","","",""
 "Tooltip.LABEL[YY.WT.LockElevation]","Clique com botão direito do mouse para designar a altura da superfície de água.","","","","","","","","","","","",""
+"Options.GROUP:Experimental","Experimental","","","","","","","","","","","",""
+"Options.GROUP:Stable","Stable","","","","","","","","","","","",""
+"Options.OPTION:Fluidness","Fluidness","","","","","","","","","","","",""
+"Options.OPTION_DESCRIPTION:Fluidness","Alter the Fluidness factor of the water system. It should change the flow characteristics.","","","","","","","","","","","",""
+"Editor.TOOL[Yenyang's Water Tool]","Yenyang's Water Tool","","","","","","","","","","","",""
+"Options.OPTION:WaterToolSettingsAffectEditorSimulation","Water Tool Settings Affect Editor Simulation","","","","","","","","","","","",""
+"Options.OPTION_DESCRIPTION:WaterToolSettingsAffectEditorSimulation","Allows the settings in the Water Tool tab to affect the editor simulation such as evaporation, fluidness, and Water Clean Up Cycle.","","","","","","","","","","","",""
+"Options.OPTION:SeasonalStreamsAffectEditorSimulation","Seasonal Streams Settings Affect Editor Simulation","","","","","","","","","","","",""
+"Options.OPTION_DESCRIPTION:SeasonalStreamsAffectEditorSimulation","Allows the settings in the Seasonal Streams tab to affect the editor simulation and alter stream flowrates.","","","","","","","","","","","",""
+"Options.OPTION:WavesAndTidesAffectEditorSimulation","Waves and Tides Settings Affect Editor Simulation","","","","","","","","","","","",""
+"Options.OPTION_DESCRIPTION:WavesAndTidesAffectEditorSimulation","Allows the settings in the Waves and Tides tab to affect the editor simulation by oscillating sea level and altering damping value.","","","","","","","","","","","",""
+"YY_WATER_FEATURES_DESCRIPTION.ElevationChange","Water Tool will change target elevations of existing water sources by hovering over existing water source, left clicking, holding, dragging and releasing at new elevation. Usually dragging out raises, and dragging in lowers, but it's really just releasing at the desired elevation. Keep the cursor within playable area for reliability. Right click to cancel.","","","","","","","","","","","",""
+"YY_WATER_FEATURES_DESCRIPTION.PlaceWaterSource","Water Tool will place water sources with left click, and remove water sources with right click.","","","","","","","","","","","",""
+"YY_WATER_FEATURES_DESCRIPTION.MoveWaterSource","Water Tool will move existing water sources. Target elevations of existing water sources will not change. Right click to cancel.","","","","","","","","","","","",""
+"YY_WATER_FEATURES_DESCRIPTION.RadiusChange","Water Tool will change radius of water sources. Right click to cancel.","","","","","","","","","","","",""
+"YY_WATER_FEATURES.ElevationChange","Elevation Change","","","","","","","","","","","",""
+"YY_WATER_FEATURES.PlaceWaterSource","Place Water Source","","","","","","","","","","","",""
+"YY_WATER_FEATURES.MoveWaterSource","Move Water Source","","","","","","","","","","","",""
+"YY_WATER_FEATURES.RadiusChange","Change Radius","","","","","","","","","","","",""
