--- a/Water_Features/l10n/es-ES.csv
+++ b/Water_Features/l10n/es-ES.csv
@@ -63,23 +63,14 @@
 "YY_WATER_FEATURES.OriginalFlow","Flujo Original","","","","","","","","","","","",""
 "YY_WATER_FEATURES.MinDepth","Profundidad mínima","","","","","","","","","","","",""
 "YY_WATER_FEATURES.Radius","Radio","","","","","","","","","","","",""
-"YY_WATER_FEATURES.amount-down-arrow","Reducir flujo/profundidad/elevación","","","","","","","","","","","",""
 "YY_WATER_FEATURES_DESCRIPTION.amount-down-arrow","Reduce el flujo de corrientes. Reduce la profundidad o elevación de ríos, mares y lagos. Reduce la profundidad máxima para la retención y las cuencas de detención.","","","","","","","","","","","",""
-"YY_WATER_FEATURES.amount-up-arrow","Incrementar flujo/profundidad/elevación","","","","","","","","","","","",""
 "YY_WATER_FEATURES_DESCRIPTION.amount-up-arrow","Aumenta el flujo de corrientes. Aumenta la profundidad o elevación de ríos, mares y lagos. Aumenta la profundidad máxima para la retención y las cuencas de detención.","","","","","","","","","","","",""
-"YY_WATER_FEATURES.radius-down-arrow","Reducir radio","","","","","","","","","","","",""
 "YY_WATER_FEATURES_DESCRIPTION.radius-down-arrow","Reduce el radio.","","","","","","","","","","","",""
-"YY_WATER_FEATURES.radius-up-arrow","Incrementar radio","","","","","","","","","","","",""
 "YY_WATER_FEATURES_DESCRIPTION.radius-up-arrow","Aumenta el radio.","","","","","","","","","","","",""
-"YY_WATER_FEATURES.min-depth-down-arrow","Reducir profundidad mínima","","","","","","","","","","","",""
 "YY_WATER_FEATURES_DESCRIPTION.min-depth-down-arrow","Reduce la profundidad mínima.","","","","","","","","","","","",""
-"YY_WATER_FEATURES.min-depth-up-arrow","Aumenta la profundidad mínima","","","","","","","","","","","",""
 "YY_WATER_FEATURES_DESCRIPTION.min-depth-up-arrow","Aumenta la profundidad mínima.","","","","","","","","","","","",""
-"YY_WATER_FEATURES.amount-rate-of-change","Tasa de cambio de flujo/profundidad/elevación","","","","","","","","","","","",""
 "YY_WATER_FEATURES_DESCRIPTION.amount-rate-of-change","Cambia la velocidad en la que funcionan los botones de aumento y disminución para fluidez, profundidad y elevación.","","","","","","","","","","","",""
-"YY_WATER_FEATURES.radius-rate-of-change","Tasa de cambio del radio","","","","","","","","","","","",""
 "YY_WATER_FEATURES_DESCRIPTION.radius-rate-of-change","Cambia la velocidad en la que funcionan los botones de aumento y disminución para el radio.","","","","","","","","","","","",""
-"YY_WATER_FEATURES.min-depth-rate-of-change","Tasa mínima de profundidad","","","","","","","","","","","",""
 "YY_WATER_FEATURES_DESCRIPTION.min-depth-rate-of-change","Cambia la velocidad en la que los botones de aumento y disminución funcionan para una profundidad mínima.","","","","","","","","","","","",""
 "SubServices.NAME[WaterTool]","Herramienta de agua","","","","","","","","","","","",""
 "Assets.SUB_SERVICE_DESCRIPTION[WaterTool]","La herramienta de agua te permite añadir y quitar fuentes de agua de tu mapa.","","","","","","","","","","","",""
@@ -101,3 +92,22 @@
 "Tooltip.LABEL[YY.WT.PlaceInsideBorder]","Esta fuente de agua debe colocarse dentro del mapa jugable.","","","","","","","","","","","",""
 "Tooltip.LABEL[YY.WT.MustTouchBorder]","Las fuentes de agua del mar deben tocar la frontera del mapa.","","","","","","","","","","","",""
 "Tooltip.LABEL[YY.WT.LockElevation]","Haga clic derecho para designar la elevación de la superficie del agua.","","","","","","","","","","","",""
+"Options.GROUP:Experimental","Experimental","","","","","","","","","","","",""
+"Options.GROUP:Stable","Stable","","","","","","","","","","","",""
+"Options.OPTION:Fluidness","Fluidness","","","","","","","","","","","",""
+"Options.OPTION_DESCRIPTION:Fluidness","Alter the Fluidness factor of the water system. It should change the flow characteristics.","","","","","","","","","","","",""
+"Editor.TOOL[Yenyang's Water Tool]","Yenyang's Water Tool","","","","","","","","","","","",""
+"Options.OPTION:WaterToolSettingsAffectEditorSimulation","Water Tool Settings Affect Editor Simulation","","","","","","","","","","","",""
+"Options.OPTION_DESCRIPTION:WaterToolSettingsAffectEditorSimulation","Allows the settings in the Water Tool tab to affect the editor simulation such as evaporation, fluidness, and Water Clean Up Cycle.","","","","","","","","","","","",""
+"Options.OPTION:SeasonalStreamsAffectEditorSimulation","Seasonal Streams Settings Affect Editor Simulation","","","","","","","","","","","",""
+"Options.OPTION_DESCRIPTION:SeasonalStreamsAffectEditorSimulation","Allows the settings in the Seasonal Streams tab to affect the editor simulation and alter stream flowrates.","","","","","","","","","","","",""
+"Options.OPTION:WavesAndTidesAffectEditorSimulation","Waves and Tides Settings Affect Editor Simulation","","","","","","","","","","","",""
+"Options.OPTION_DESCRIPTION:WavesAndTidesAffectEditorSimulation","Allows the settings in the Waves and Tides tab to affect the editor simulation by oscillating sea level and altering damping value.","","","","","","","","","","","",""
+"YY_WATER_FEATURES_DESCRIPTION.ElevationChange","Water Tool will change target elevations of existing water sources by hovering over existing water source, left clicking, holding, dragging and releasing at new elevation. Usually dragging out raises, and dragging in lowers, but it's really just releasing at the desired elevation. Keep the cursor within playable area for reliability. Right click to cancel.","","","","","","","","","","","",""
+"YY_WATER_FEATURES_DESCRIPTION.PlaceWaterSource","Water Tool will place water sources with left click, and remove water sources with right click.","","","","","","","","","","","",""
+"YY_WATER_FEATURES_DESCRIPTION.MoveWaterSource","Water Tool will move existing water sources. Target elevations of existing water sources will not change. Right click to cancel.","","","","","","","","","","","",""
+"YY_WATER_FEATURES_DESCRIPTION.RadiusChange","Water Tool will change radius of water sources. Right click to cancel.","","","","","","","","","","","",""
+"YY_WATER_FEATURES.ElevationChange","Elevation Change","","","","","","","","","","","",""
+"YY_WATER_FEATURES.PlaceWaterSource","Place Water Source","","","","","","","","","","","",""
+"YY_WATER_FEATURES.MoveWaterSource","Move Water Source","","","","","","","","","","","",""
+"YY_WATER_FEATURES.RadiusChange","Change Radius","","","","","","","","","","","",""
