--- a/Water_Features/l10n/zh-HANT.csv
+++ b/Water_Features/l10n/zh-HANT.csv
@@ -1,8 +1,8 @@
 "Options.SECTION[Water_Features.Water_Features.WaterFeaturesMod]","Water Features","","","","","","","","","","","",""
 "Options.TAB[Water_Features.Water_Features.WaterFeaturesMod.Seasonal Streams]","Seasonal Streams","","","","","","","","","","","",""
-"Options.TAB[Water_Features.Water_Features.WaterFeaturesMod.Water Tool]","水源工具","","","","","","","","","","","",""
+"Options.TAB[Water_Features.Water_Features.WaterFeaturesMod.Water Tool]","Water Tool","","","","","","","","","","","",""
 "Options.TAB[Water_Features.Water_Features.WaterFeaturesMod.Waves and Tides]","Waves and Tides","","","","","","","","","","","",""
-"Options.GROUP[Water_Features.Water_Features.WaterFeaturesMod.Seasonal Streams]","季节性河流","","","","","","","","","","","",""
+"Options.GROUP[Water_Features.Water_Features.WaterFeaturesMod.Seasonal Streams]","Seasonal Streams","","","","","","","","","","","",""
 "Options.GROUP[Water_Features.Water_Features.WaterFeaturesMod.Water Tool]","Water Tool","","","","","","","","","","","",""
 "Options.GROUP[Water_Features.Water_Features.WaterFeaturesMod.Waves and Tides]","Waves and Tides","","","","","","","","","","","",""
 "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.IncludeRetentionBasins]","Add Retention Basins (Restart Required)","","","","","","","","","","","",""
@@ -10,16 +10,16 @@
 "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.IncludeDetentionBasins]","Add Detention Basins (Restart Required)","","","","","","","","","","","",""
 "Options.OPTION_DESCRIPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.IncludeDetentionBasins]","Custom modded water source that rises with precipitation and snowmelt and slowly drains when the weather is dry. They have a maximum water surface elevation but no minimum water surface elevation. You may need to adjust the global evaporation rate in the settings for desirable infiltration of the pond water.","","","","","","","","","","","",""
 "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.TrySmallerRadii]","Try Smaller Radii","","","","","","","","","","","",""
-"Options.OPTION_DESCRIPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.TrySmallerRadii]","放置半径小于5米的水源。如果无法放置，半径将会增大到下一个有效的值。","","","","","","","","","","","",""
+"Options.OPTION_DESCRIPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.TrySmallerRadii]","Lets you try to make a water source with a radius smaller than 5m. It will not always work, but will be increased to a radius that does work.","","","","","","","","","","","",""
 "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.EvaporationRate]","Evaporation Rate","","","","","","","","","","","",""
 "Options.OPTION_DESCRIPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.EvaporationRate]","Should probably leave at default unless you are using detention or retention basins. Actual evaporation rate is 1000x smaller but this gives you control over the rate. This is global and you may want to rebalance and increase flows of water sources after increasing it.","","","","","","","","","","","",""
-"Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.EnableSeasonalStreams]","启用季节性河流","","","","","","","","","","","",""
+"Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.EnableSeasonalStreams]","開啟季節性河流功能","","","","","","","","","","","",""
 "Options.OPTION_DESCRIPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.EnableSeasonalStreams]","Seasonal streams takes Streams (Modified Constant Rate Water Sources) and ties them to the climate and weather for the map. For example, if your map features a dry summer, then these water sources will decrease during the summer. Seasonal streams by it-self should not cause flooding since it treats the map's default water source amount as a maximum unless you change it. All aspects are optional and adjustable in the mod's settings.","","","","","","","","","","","",""
 "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.SimulateSnowMelt]","Simulate Snow Melt","","","","","","","","","","","",""
 "Options.OPTION_DESCRIPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.SimulateSnowMelt]","Simulate snow accumulation and snow melt. Snow melt is not currently tied to snow visuals. This affects Constant Rate Water Sources, Detention and Retention basins.","","","","","","","","","","","",""
-"Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.ConstantFlowRate]","恒定河流量","","","","","","","","","","","",""
+"Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.ConstantFlowRate]","Constant Flow Rate","","","","","","","","","","","",""
 "Options.OPTION_DESCRIPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.ConstantFlowRate]","Constant flow rate from  Streams (Modified Constant Rate Water Sources) unaffected by season or weather.","","","","","","","","","","","",""
-"Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.StreamSeasonality]","季节性","","","","","","","","","","","",""
+"Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.StreamSeasonality]","Seasonality","","","","","","","","","","","",""
 "Options.OPTION_DESCRIPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.StreamSeasonality]","Streams (Modified Constant Rate Water Sources) flowrates will increase by this percentage during the season with the highest mean seasonal precipitation. Other seasons will be proportional.","","","","","","","","","","","",""
 "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.StreamStormwaterEffects]","Stormwater Effects","","","","","","","","","","","",""
 "Options.OPTION_DESCRIPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.StreamStormwaterEffects]","Streams (Modified Constant Rate Water Sources) flowrates will increase by this percentage when current precipitation (rain) is at a maximum. Less precipitation is proportional.","","","","","","","","","","","",""
@@ -29,7 +29,7 @@
 "Options.OPTION_DESCRIPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.MaximumMultiplier]","Maximum multiplier applied to stream flowrates.","","","","","","","","","","","",""
 "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.EnableWavesAndTides]","Enable Waves and Tides","","","","","","","","","","","",""
 "Options.OPTION_DESCRIPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.EnableWavesAndTides]","This feature is dependent on map design. Maps with a sea water source and a single shoreline work best. The point of the waves feature is to make the shore move in and out and make sand along the shoreline. A better way to make beaches is to just paint them with surface painter instead. Waves exacerbate the magnitude of the water surface. Tides happen once or twice a day. Waves and tides are always lower than the original sea level and do not cause flooding.","","","","","","","","","","","",""
-"Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.WaveHeight]","Wave Height","","","","","","","","","","","",""
+"Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.WaveHeight]","波浪高度","","","","","","","","","","","",""
 "Options.OPTION_DESCRIPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.WaveHeight]","Waves are generated at the map boundary where there is a Sea water source. Once generated they head towards shore. Maps were not necessarily designed for these waves, and the waves exacerbate the water surface. Waves are lower than the sea level from the original map and do not cause flooding. Maps such as San Francisco with shallow seas will need waves and tides with smaller heights to avoid large swathes of non-playable area becoming dry sand.","","","","","","","","","","","",""
 "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.WaveFrequency]","Wave Frequency","","","","","","","","","","","",""
 "Options.OPTION_DESCRIPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.WaveFrequency]","Frequency for waves per day.","","","","","","","","","","","",""
@@ -39,21 +39,21 @@
 "Options.OPTION_DESCRIPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.TideClassification]","Diurnal tides have one high and one low tide per day. Semidiurnal has two high tides and two low tides per day.","","","","","","","","","","","",""
 "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.Damping]","Damping","","","","","","","","","","","",""
 "Options.OPTION_DESCRIPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.Damping]","A higher value makes waves stronger while a lower value makes waves weaker. Stronger waves reach farther into the map. Weak waves may disperse before reaching shore. Vanilla is 9950 Recommended 9980-9999. The actual value is 10000x less.","","","","","","","","","","","",""
-"Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.WaterCleanUpCycleButton]","Water Clean Up Cycle","","","","","","","","","","","",""
-"Options.OPTION_DESCRIPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.WaterCleanUpCycleButton]","This will increase the rate of evaporation by 1000x FOR THE WHOLE MAP for a short amount of time before returning to normal. For cleaning up water messes but USE AT YOUR OWN RISK! Lakes with an target elevation below the ground level are a safer way to remove water.","","","","","","","","","","","",""
-"Options.WARNING[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.WaterCleanUpCycleButton]","Start Water Clean Up Cycle?","","","","","","","","","","","",""
-"Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.ResetWaterToolGroupButton]","重置 水源工具 的设置","","","","","","","","","","","",""
-"Options.OPTION_DESCRIPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.ResetWaterToolGroupButton]","确认后将重置 水源工具 的设置。","","","","","","","","","","","",""
-"Options.WARNING[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.ResetWaterToolGroupButton]","重置 水源工具 的设置？","","","","","","","","","","","",""
-"Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.ResetSeasonalStreamsSettingsButton]","重置 季节性河流 的设置","","","","","","","","","","","",""
-"Options.OPTION_DESCRIPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.ResetSeasonalStreamsSettingsButton]","确认后将重置 季节性河流 的设置。","","","","","","","","","","","",""
-"Options.WARNING[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.ResetSeasonalStreamsSettingsButton]","重置 季节性河流 的设置？","","","","","","","","","","","",""
+"Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.WaterCleanUpCycleButton]","清除水循環","","","","","","","","","","","",""
+"Options.OPTION_DESCRIPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.WaterCleanUpCycleButton]","這將使整個地圖的蒸發率在短時間內增加 1000 倍，然後恢復正常。 用於清理水漬，但使用風險自負！ 目標海拔低於地面的湖泊是更安全的排水方式。","","","","","","","","","","","",""
+"Options.WARNING[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.WaterCleanUpCycleButton]","開始清除水循環?","","","","","","","","","","","",""
+"Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.ResetWaterToolGroupButton]","重製工具設定","","","","","","","","","","","",""
+"Options.OPTION_DESCRIPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.ResetWaterToolGroupButton]","再次確認，即將清除工具設定。","","","","","","","","","","","",""
+"Options.WARNING[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.ResetWaterToolGroupButton]","Reset Water Tool Settings?","","","","","","","","","","","",""
+"Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.ResetSeasonalStreamsSettingsButton]","Reset Seasonal Streams Settings","","","","","","","","","","","",""
+"Options.OPTION_DESCRIPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.ResetSeasonalStreamsSettingsButton]","On confirmation, resets Seasonal Streams Settings.","","","","","","","","","","","",""
+"Options.WARNING[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.ResetSeasonalStreamsSettingsButton]","Reset Seasonal Streams Settings?","","","","","","","","","","","",""
 "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.ResetWavesAndTidesSettingsButton]","Reset Waves and Tides Settings","","","","","","","","","","","",""
 "Options.OPTION_DESCRIPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.ResetWavesAndTidesSettingsButton]","On confirmation, resets Waves and Tides Settings.","","","","","","","","","","","",""
 "Options.WARNING[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.ResetWavesAndTidesSettingsButton]","Reset Waves and Tides Settings?","","","","","","","","","","","",""
 "Options.Water_Features.Water_Features.WaterFeaturesMod.TIDECLASSIFICATIONYYTAW[Diurnal]","Diurnal","","","","","","","","","","","",""
 "Options.Water_Features.Water_Features.WaterFeaturesMod.TIDECLASSIFICATIONYYTAW[Semidiurnal]","Semidiurnal","","","","","","","","","","","",""
-"YY_WATER_FEATURES.Flow","流量","","","","","","","","","","","",""
+"YY_WATER_FEATURES.Flow","Flow","","","","","","","","","","","",""
 "YY_WATER_FEATURES.Depth","深度","","","","","","","","","","","",""
 "YY_WATER_FEATURES.MaxDepth","最大深度","","","","","","","","","","","",""
 "YY_WATER_FEATURES.Elevation","Elevation","","","","","","","","","","","",""
@@ -61,8 +61,8 @@
 "YY_WATER_FEATURES.MaxElevation","Max Elevation","","","","","","","","","","","",""
 "YY_WATER_FEATURES.SnowAccumulation","Snow Accumulation","","","","","","","","","","","",""
 "YY_WATER_FEATURES.OriginalFlow","Original Flow","","","","","","","","","","","",""
-"YY_WATER_FEATURES.MinDepth","最小深度","","","","","","","","","","","",""
-"YY_WATER_FEATURES.Radius","半径","","","","","","","","","","","",""
+"YY_WATER_FEATURES.MinDepth","Min Depth","","","","","","","","","","","",""
+"YY_WATER_FEATURES.Radius","Radius","","","","","","","","","","","",""
 "YY_WATER_FEATURES_DESCRIPTION.amount-down-arrow","Reduces the flow for Streams. Decreases the depth or elevation for rivers, seas, and lakes. Reduces the max depth for retention and detention basins.","","","","","","","","","","","",""
 "YY_WATER_FEATURES_DESCRIPTION.amount-up-arrow","Increases the flow for Streams. Increases the depth or elevation for rivers, seas, and lakes. Increases the max depth for retention and detention basins.","","","","","","","","","","","",""
 "YY_WATER_FEATURES_DESCRIPTION.radius-down-arrow","Reduces the radius.","","","","","","","","","","","",""
@@ -73,7 +73,7 @@
 "YY_WATER_FEATURES_DESCRIPTION.radius-rate-of-change","Changes the rate in which the increase and decrease buttons work for Radius.","","","","","","","","","","","",""
 "YY_WATER_FEATURES_DESCRIPTION.min-depth-rate-of-change","Changes the rate in which the increase and decrease buttons work for minimum depth.","","","","","","","","","","","",""
 "SubServices.NAME[WaterTool]","Water Tool","","","","","","","","","","","",""
-"Assets.SUB_SERVICE_DESCRIPTION[WaterTool]","允许您在地图中添加和移除水源。","","","","","","","","","","","",""
+"Assets.SUB_SERVICE_DESCRIPTION[WaterTool]","Water tool allows you to add and remove water sources from your map.","","","","","","","","","","","",""
 "Assets.NAME[WaterSource Stream]","Stream - Constant or Variable Rate Water Source","","","","","","","","","","","",""
 "Assets.DESCRIPTION[WaterSource Stream]","Emits water depending on the settings for this mod. With Seasonal Streams disabled, the flow rate will be constant. With Seasonal Streams enabled the flow rate will vary with season, precipitation, and snowmelt depending on your settings. Left click to place within playable area. Hover over and right click to remove.","","","","","","","","","","","",""
 "Assets.NAME[WaterSource River]","River - Border River Water Source","","","","","","","","","","","",""
@@ -87,8 +87,8 @@
 "Assets.NAME[WaterSource RetentionBasin]","Retention Basin","","","","","","","","","","","",""
 "Assets.DESCRIPTION[WaterSource RetentionBasin]","Custom modded water source that rises with precipitation and snowmelt and slowly drains when the weather is dry. They have a maximum water surface elevation and a minimum water surface elevation. Right click to designate the maximum elevation. Left click to place within playable area. Hover over and right click to remove.","","","","","","","","","","","",""
 "Tooltip.LABEL[YY.WT.PlaceNearBorder]","Rivers must be placed near map border.","","","","","","","","","","","",""
-"Tooltip.LABEL[YY.WT.RadiusTooSmall]","由于半径太小，已自动增大。","","","","","","","","","","","",""
-"Tooltip.LABEL[YY.WT.RemoveWaterSource]","右键单击可移除水源。","","","","","","","","","","","",""
+"Tooltip.LABEL[YY.WT.RadiusTooSmall]","The radius is too small and has been automically increased.","","","","","","","","","","","",""
+"Tooltip.LABEL[YY.WT.RemoveWaterSource]","滑鼠右鍵刪除水資源","","","","","","","","","","","",""
 "Tooltip.LABEL[YY.WT.PlaceInsideBorder]","This water source must be placed inside the playable map.","","","","","","","","","","","",""
 "Tooltip.LABEL[YY.WT.MustTouchBorder]","Sea water sources must touch the map border.","","","","","","","","","","","",""
 "Tooltip.LABEL[YY.WT.LockElevation]","Right click to designate the water surface elevation.","","","","","","","","","","","",""
